# ticket-modal

./: .gitignore  Cargo.toml  test.py
migrations/: 20231123051702_ticket.sql
src/: main.rs
