[package]
name = "ticket-modal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.34.0", features = ["full"] }
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }
